# first-step-langchain

./: .env.template  LICENSE  Makefile  README.md  app.py  app_llm.py  pyproject.toml
docs/: 就業規則_株式会社はじめてのLangChain.docx
